--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,14 +11,14 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  update-ver:
     name: Build
     runs-on: ubuntu-latest
 
     strategy:
         fail-fast: false
         matrix:
-          old_pgr: [3.5.0, 3.4.2, 3.4.1, 3.4.0, 3.3.5, 3.3.4, 3.3.3, 3.3.2, 3.3.1, 3.3.0, 3.0.0, 3.0.1, 3.0.2, 3.0.3, 3.0.4, 3.0.6, 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.2.0, 3.2.1, 3.2.2]
+          old_pgr: [3.5.0, 3.4.2, 3.3.5, 3.2.2, 3.1.3, 3.0.6]
 
     steps:
       - uses: actions/checkout@v3
