--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          old_pgr: [3.5.0, 3.4.2, 3.3.5, 3.2.2, 3.1.3, 3.0.6]
+          old_pgr: [3.4.1, 3.3.5, 3.2.2, 3.1.3, 3.0.6]
 
     steps:
       - uses: actions/checkout@v3
