--- a/src/cpp_common/CMakeLists.txt
+++ b/src/cpp_common/CMakeLists.txt
@@ -5,4 +5,6 @@ ADD_LIBRARY(cpp_common OBJECT
     bpoint.cpp
     pgr_messages.cpp
     combinations.cpp
+
+    pgr_maximumcardinalitymatching.cpp
     )
