[maxCardinalityMatch] reorganizing files & linting code

--- a/src/cpp_common/CMakeLists.txt
+++ b/src/cpp_common/CMakeLists.txt
@@ -6,5 +6,6 @@ ADD_LIBRARY(cpp_common OBJECT
     pgr_messages.cpp
     combinations.cpp
 
-    pgr_maximumcardinalitymatching.cpp
+    undirectedNoCostBG.cpp
+    maxCardinalityMatch.cpp
     )
