[CI][ubuntu] fixing on ubuntu-latest

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -77,8 +77,8 @@ jobs:
         run: |
           sudo service postgresql start
           sudo -u postgres createdb -p ${PGPORT}  ___pgr___test___
-          ls -la .
-          ls -la /home/runner/work/pgrouting/pgrouting
+          ls -la ./tools
+          ls -la ./tools/testers
           pushd ./tools/testers/ || exit 1
-          sudo -u postgres bash setup_db.sh "${PGPORT}" "___pgr___test___" postgres "3.5.0"
+          bash setup_db.sh "${PGPORT}" "___pgr___test___" postgres "3.5.0"
           #bash ./tools/testers/pg_prove_tests.sh postgres ${PGPORT}  Release
